Add turns & timer divs, new game button and audio controls.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 
@@ -15,12 +15,25 @@
 <body>
 
     <header>
-
+        <h1 class="heading">Puppy Puzzle</h1>
     </header>
 
-    <footer>
+    <div class="stats">
+        <h2 class="turns">Turns: <span id="turns">0</span></h2>
 
-    
+        <h2 class="time">Time <span id="count-up">00:00</span></h2>
+    </div>
+
+
+
+
+    <button class="start-game">New Game</button>
+
+    <footer>
+        <audio class="audio-button" controls muted loop src="assets\audio\itty-bitty-8-bit.mp3">This browser
+            does not support
+            audio</audio>
+
     </footer>
 
     <script src="assets\js\script.js"></script>
