--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <h2 class="time">Time <span id="count-up">00:00</span></h2>
     </div>
 
+    <div class="puzzle-board" id="puzzle-board">
 
+    </div>
 
 
     <button class="start-game">New Game</button>
