Add how-to-play page and link in navbar. Add padding to .sound-new.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
             audio</audio>
 
         <button class="new-game">New Game</button>
-        
+
     </div>
+
+    <nav class="navbar">
+        <a href="how-to-play.html">How to Play</a>
+    </nav>
 
     <footer>
         <div class="social-icons" id="icons">
