Rearrange buttons/controls html and add styling and responsiveness to same for small screens with media queries.

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
 
     </div>
 
-    <div class="sound-new">
+    <div class="how-new">
 
-        <audio class="audio-button" controls muted loop src="assets\audio\itty-bitty-8-bit.mp3">This browser
-            does not support
-            audio</audio>
+        <button class="how-to-play">
+            <a href="how-to-play.html">How to Play</a>
+        </button>
 
         <button class="new-game">New Game</button>
 
     </div>
 
-    <nav class="navbar">
-        <a href="how-to-play.html">How to Play</a>
-    </nav>
+    
+
+    <audio class="audio-button" controls muted loop src="assets\audio\itty-bitty-8-bit.mp3">This browser
+        does not support
+        audio</audio>
 
     <footer>
         <div class="social-icons" id="icons">
