Add JavaScript to allow tiles to swap with grey tile.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="how-to-play.html">How to Play</a>
         </button>
 
-        <button class="new-game">New Game</button>
+        <button class="new-game" id="new-game">New Game</button>
 
     </div>
 
