--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/fbc63c20c7.js" crossorigin="anonymous"></script>
 
-    <script src="assets\js\script.js"></script>
+    <script src="assets/js/script.js"></script>
 
 </body>
 
