Add "Turns" counter. Update "How to Play" text.

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -18,7 +18,8 @@
 <p>The aim of the game is to rearrange the puzzle pieces back into the correct order to reveal the picture. 
     When you click (or tap) on a puzzle piece that is left/right or above/below the empty (grey) puzzle piece, it will swap with the puzzle piece you selected. 
     Using this method you can move the puzzle pieces around the board until you successfully rearrange them back into the correct order. 
-    This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve.  </p>
+    This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve. 
+    Just remember that it took the inventor of the Rubik's Cube a month to solve it...</p>
     <h2>Enjoy!!!</h2>
 </body>
 
