Add open "How to Play" in new window & update paragraph text.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="how-new">
 
         <button class="how-to-play">
-            <a href="how-to-play.html">How to Play</a>
+            <a href="how-to-play.html" target="_blank" rel="noopener">How to Play</a>
         </button>
 
         <button class="new-game" id="new-game">New Game</button>
