Add "How to Play" modal JavaScript, text styling & update html.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
     <div class="how-new">
 
-        <button class="how-to-play">
-            <a href="how-to-play.html" target="_blank" rel="noopener">How to Play</a>
+        <button class="how-to-play" id="how-to-play">How to Play</a>
         </button>
 
         <button class="new-game" id="new-game">New Game</button>
@@ -54,28 +53,26 @@
                     class="fa-brands fa-instagram"></i></a>
         </div>
 
-   <!--     <div class="modal-rules" id="modal-rules">
-            <div class="modal-rules-body" id="modal-rules-body"></div>
-            <span class="close-buttton" id="close-buttton"></span>
-            <p id="modal-message"> <h3>How to Play</h3> 
+        <div class="modal-rules" id="modal-rules">
+            <div class="modal-rules-body" id="modal-rules-body">
+            <p id="modal-message">
+            <h3>How to Play</h3>
 
-            </header>
-            
-            <p>The aim of the game is to rearrange the puzzle pieces back into the correct order to reveal the picture. 
-                When you click (or tap) on a puzzle piece that is left/right or above/below the empty (grey) puzzle piece, it will swap with the puzzle piece you selected. 
-                Using this method you can move the puzzle pieces around the board until you successfully rearrange them back into the correct order. 
-                This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve. 
+            <p>The aim of the game is to rearrange the puzzle pieces back into the correct order to reveal the picture.
+                When you click (or tap) on a puzzle piece that is left/right or above/below the empty (grey) puzzle
+                piece, it will swap with the puzzle piece you selected.
+                Using this method you can move the puzzle pieces around the board until you successfully rearrange them
+                back into the correct order.
+                This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve.
                 Just remember that it took the inventor of the Rubik's Cube a month to solve it...</p>
-                <h3>Enjoy!!!</h3>
-            </body>
-            
-            </html> 
-            </p>
+            <h3>Enjoy!!!</h3>
+            <span class="close-button" id="close-button">Close</span>
+        </div>
         </div>
 
-        <div class="modal-win" id="modal-win">
+        <!--      <div class="modal-win" id="modal-win">
             <div class="modal-body" id="modal-body">
-                <span class="close-buttton" id="close-buttton">&times;</span>
+                <span class="close-button" id="close-button">&times;</span>
                 <p id="modal-message">Congratulations! You got there in the end in <span id="movesCount"></span> moves!
                 </p>
             </div>
@@ -91,7 +88,6 @@
     <script src="https://kit.fontawesome.com/fbc63c20c7.js" crossorigin="anonymous"></script>
 
     <script src="assets/js/script.js"></script>
-
 </body>
 
 </html>
