Add "are you sure" modal for new game with html & JavaScript, style modal and correct "How to Play" style with media query.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,15 @@
                 <p id="modal-message">Congratulations! You got there in the end in <span id="movesCount"></span> moves!
                 </p>
             </div>
-        </div>
+        </div>   -->
 
-        <div class="modal-sure" id="modal-sure"></div> -->
+        <div class="modal-sure" id="modal-sure">
+            <div class="modal-sure-body">
+                <p id="modal-sure-message">Are you sure you want to start a new game?</p>
+                <button class="confirm-yes" id="confirm-yes">Yes</button>
+                <button class="confirm-no" id="confirm-no">No</button>
+            </div>
+        </div> 
 
         <div>Copyright © Astral Beard Productions 2024</div>
 
