--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     </header>
 
     <div class="stats">
-        <h2 class="turns">Turns: <span id="turns">0</span></h2>
-
-        <h2 class="time">Time <span id="count-up">00:00</span></h2>
+        <h2 class="turns">Turns: <span class="turns-span" id="turns">0</span></h2>
     </div>
 
     <div class="puzzle-board" id="puzzle-board">
@@ -55,28 +53,29 @@
 
         <div class="modal-rules" id="modal-rules">
             <div class="modal-rules-body" id="modal-rules-body">
-            <p id="modal-message">
-            <h3>How to Play</h3>
+                <p id="modal-message">
+                <h3>How to Play</h3>
 
-            <p>The aim of the game is to rearrange the puzzle pieces back into the correct order to reveal the picture.
-                When you click (or tap) on a puzzle piece that is left/right or above/below the empty (grey) puzzle
-                piece, it will swap with the puzzle piece you selected.
-                Using this method you can move the puzzle pieces around the board until you successfully rearrange them
-                back into the correct order.
-                This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve.
-                Just remember that it took the inventor of the Rubik's Cube a month to solve it...</p>
-            <h3>Enjoy!!!</h3>
-            <span class="close-button" id="close-button">Close</span>
-        </div>
-        </div>
-
-        <!--      <div class="modal-win" id="modal-win">
-            <div class="modal-body" id="modal-body">
-                <span class="close-button" id="close-button">&times;</span>
-                <p id="modal-message">Congratulations! You got there in the end in <span id="movesCount"></span> moves!
-                </p>
+                <p>The aim of the game is to rearrange the puzzle pieces back into the correct order to reveal the
+                    picture.
+                    When you click (or tap) on a puzzle piece that is left/right or above/below the empty (grey) puzzle
+                    piece, it will swap with the puzzle piece you selected.
+                    Using this method you can move the puzzle pieces around the board until you successfully rearrange
+                    them
+                    back into the correct order.
+                    This isn't the easiest puzzle in the world, so don't worry if it takes a while to solve.
+                    Just remember that it took the inventor of the Rubik's Cube a month to solve it...</p>
+                <h3>Enjoy!!!</h3>
+                <span class="close-button" id="close-button">Close</span>
             </div>
-        </div>   -->
+        </div>
+
+        <div class="modal-win" id="modal-win">
+            <div class="modal-win-body" id="modal-win-body">
+                <p id="modal-win-message">Congratulations! You got there in the end in <span id="win-movesCount"></span> moves!</p>
+                <span class="close-button" id="close-win-button">Close</span>
+            </div>
+        </div>
 
         <div class="modal-sure" id="modal-sure">
             <div class="modal-sure-body">
@@ -84,7 +83,7 @@
                 <button class="confirm-yes" id="confirm-yes">Yes</button>
                 <button class="confirm-no" id="confirm-no">No</button>
             </div>
-        </div> 
+        </div>
 
         <div>Copyright © Astral Beard Productions 2024</div>
 
