Add max-width to How to & New Game buttons. Make heading larger.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
         <div class="modal-win" id="modal-win">
             <div class="modal-win-body" id="modal-win-body">
-                <p id="modal-win-message">Congratulations! You got there in the end in <span id="win-movesCount"></span> moves!</p>
+                <p id="modal-win-message">Congratulations! You got there in the end in <span id="win-movesCount"></span>
+                    moves!</p>
                 <span class="close-button" id="close-win-button">Close</span>
             </div>
         </div>
@@ -92,7 +93,7 @@
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/fbc63c20c7.js" crossorigin="anonymous"></script>
 
-<script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
