--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Your browser does not support the audio element.
     </audio>
 
-    <img id="audio-icon" class="audio-button" src="assets/images/vol-on.png" alt="Audio Icon">
+    <img id="audio-icon" class="audio-button" src="assets\images\vol-off.png" alt="Audio Icon">
 
     <footer>
         <div class="social-icons" id="icons">
