Add Readme images to readme-docs, update Readme & testing results.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Puppy Puzzle</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="assets\images\favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets\images\favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets\images\favicon.ico">
-    <link rel="stylesheet" href="assets\css\style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <div class="how-new">
 
-        <button class="how-to-play" id="how-to-play">How to Play</a>
+        <button class="how-to-play" id="how-to-play">How to Play
         </button>
 
         <button class="new-game" id="new-game">New Game</button>
@@ -42,7 +42,7 @@
         Your browser does not support the audio element.
     </audio>
 
-    <img id="audio-icon" class="audio-button" src="assets\images\vol-off.png" alt="Audio Icon">
+    <img id="audio-icon" class="audio-button" src="assets/images/vol-off.png" alt="Audio Icon">
 
     <footer>
         <div class="social-icons" id="icons">
